# opengl-raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bvh.cpp  bvh.h  constants.h  fragment.frag  main.cpp  normals.glsl  obj-reader.cpp  obj-reader.h  raytrace.cpp  raytrace.glsl  raytrace.h  scene-loader.cpp  scene-loader.h  util.cpp  util.h  vertex.vert
.github/workflows/: cmake-single-platform.yml
shaders/: fragment.frag  normals.glsl  raytrace.frag  raytrace.glsl  vertex.vert
